--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Currency Exchange",
+  "name": "currency-exchange",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -24,12 +24,15 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.2",
     "jest": "^24.9.0",
+    "node-fetch": "^2.6.7",
     "style-loader": "^1.3.0",
     "webpack": "4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "3.11.3"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3"
-  }
+    "bootstrap": "^4.5.3",
+    "esm": "^3.2.25"
+  },
+  "type": "module"
 }
