--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "webpack-dev-server": "3.11.3"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "esm": "^3.2.25"
-  },
-  "type": "module"
+    "bootstrap": "^4.5.3"
+  }
 }
